# coursework

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  donation_pb2.py  donation_pb2_grpc.py  pyproject.toml  run_bot.py
alembic/: env.py
alembic/versions/: 001_initial_migration.py  2ab95ea51998_add_assets_table_and_update_donations.py  2cac03aded03_add_preferred_currency_to_users.py  2cc4da32fb1c_add_currencies_table.py  448a17664463_fix_telegram_id_type_from_integer_to_.py
bot/: Dockerfile  config_reader.py  grpc_client.py  main.py
bot/handlers/: settings.py
bot/keyboards/: main_menu.py
database/: __init__.py  database.py
database/models/: __init__.py  asset.py  currency.py  donation.py  oracle.py  streamer.py  user.py
database/repositories/: __init__.py  asset_repository.py  base_repository.py  currency_repository.py  donation_repository.py  oracle_repository.py  streamer_repository.py  user_repository.py
overlay/: Dockerfile  generate_overlay.py  main.py
payment_service/: Dockerfile  main.py  pyproject.toml
proto/: donation.proto
scripts/: clear_database.py  create_test_streamer.py  init_assets.py  init_currencies.py  init_networks_and_oracles.py  recreate_database.py  send_test_donation.py
services/: chainlink_service.py  crypto_rates_service.py  currency_service.py  free_price_services.py  price_oracle_service.py
