[tool.poetry]
name = "payment-service"
version = "0.1.0"
description = "Микросервис для обработки крипто-платежей и мониторинга блокчейн транзакций"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.60.0"
grpcio-tools = "^1.60.0"
protobuf = "^5.28.0"
qrcode = {extras = ["pil"], version = "^7.4.2"}
requests = "^2.31.0"
pillow = "^10.0.0"
asyncio = "^3.4.3"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 